--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,5 @@ dependencies {
 
     implementation project(path: ':uikit')
     implementation 'com.google.android.material:material:1.3.0-alpha04'
+    implementation 'org.matomo.sdk:tracker:4.1.2'
 }
